--- a/SoundTuner/Base.lproj/Main.storyboard
+++ b/SoundTuner/Base.lproj/Main.storyboard
@@ -44,6 +44,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="171" id="UHB-na-Cmq"/>
                                     <constraint firstAttribute="width" secondItem="TyA-SK-zrU" secondAttribute="height" multiplier="220:171" id="e6d-R7-zum"/>
                                 </constraints>
                             </stackView>
@@ -91,7 +92,7 @@
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="MMx-YF-3A6"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp7-Xe-S1F" userLabel="echo">
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp7-Xe-S1F" userLabel="echo">
                                                 <rect key="frame" x="280" y="0.0" width="280" height="134"/>
                                                 <state key="normal" image="echo"/>
                                                 <connections>
@@ -129,7 +130,7 @@
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="MxI-aX-8gA"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YSC-3r-oil" userLabel="vader">
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YSC-3r-oil" userLabel="vader">
                                                 <rect key="frame" x="280" y="0.0" width="280" height="134"/>
                                                 <state key="normal" image="darthvader"/>
                                                 <connections>
@@ -211,15 +212,15 @@
         </scene>
     </scenes>
     <resources>
-        <image name="chipmunk" width="200" height="200"/>
-        <image name="darthvader" width="200" height="200"/>
-        <image name="echo" width="160" height="160"/>
-        <image name="fast" width="200" height="200"/>
+        <image name="chipmunk" width="100" height="100"/>
+        <image name="darthvader" width="100" height="100"/>
+        <image name="echo" width="100" height="100"/>
+        <image name="fast" width="100" height="100"/>
         <image name="microphone" width="100" height="100"/>
         <image name="pause" width="80" height="80"/>
         <image name="resume" width="80" height="80"/>
-        <image name="reverb" width="160" height="160"/>
-        <image name="slow" width="200" height="200"/>
+        <image name="reverb" width="100" height="100"/>
+        <image name="slow" width="100" height="100"/>
         <image name="stopButton" width="50" height="50"/>
     </resources>
 </document>
