--- a/SoundTuner/Base.lproj/Main.storyboard
+++ b/SoundTuner/Base.lproj/Main.storyboard
@@ -19,24 +19,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="TyA-SK-zrU">
-                                <rect key="frame" x="190" y="215" width="220" height="171"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="TyA-SK-zrU">
+                                <rect key="frame" x="164.5" y="194.5" width="271" height="211"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XgN-DU-GkW" userLabel="record">
-                                        <rect key="frame" x="0.0" y="0.0" width="220" height="100"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="271" height="100"/>
                                         <state key="normal" image="microphone"/>
                                         <connections>
                                             <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Aoj-AD-a82"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap record to start recording" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Js9-xL-B1u">
-                                        <rect key="frame" x="0.0" y="100" width="220" height="21"/>
+                                        <rect key="frame" x="0.0" y="120" width="271" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GQv-lS-siW" userLabel="stop">
-                                        <rect key="frame" x="0.0" y="121" width="220" height="50"/>
+                                        <rect key="frame" x="0.0" y="161" width="271" height="50"/>
                                         <state key="normal" image="stopButton"/>
                                         <connections>
                                             <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S3D-vL-avL"/>
@@ -44,7 +44,6 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="171" id="UHB-na-Cmq"/>
                                     <constraint firstAttribute="width" secondItem="TyA-SK-zrU" secondAttribute="height" multiplier="220:171" id="e6d-R7-zum"/>
                                 </constraints>
                             </stackView>
@@ -79,21 +78,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="9bT-jL-u8s">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="9bT-jL-u8s">
                                 <rect key="frame" x="20" y="64" width="560" height="536"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Tme-Cz-JOx">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="134"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Tme-Cz-JOx">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="141"/>
                                         <subviews>
                                             <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEE-LY-WiK" userLabel="fast">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="fast"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="MMx-YF-3A6"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bp7-Xe-S1F" userLabel="echo">
-                                                <rect key="frame" x="280" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="280" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="echo"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="lZ9-0z-o3d"/>
@@ -101,18 +100,18 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Byl-8D-X7O">
-                                        <rect key="frame" x="0.0" y="134" width="560" height="134"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Byl-8D-X7O">
+                                        <rect key="frame" x="0.0" y="141" width="560" height="141"/>
                                         <subviews>
                                             <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ySV-D0-Ev1" userLabel="reverb">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="reverb"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="Pr7-i1-K7D"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ljg-9W-uwl" userLabel="chipmunk">
-                                                <rect key="frame" x="280" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="280" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="chipmunk"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="FRJ-XA-1gu"/>
@@ -120,18 +119,18 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-Ds-z7R">
-                                        <rect key="frame" x="0.0" y="268" width="560" height="134"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-Ds-z7R">
+                                        <rect key="frame" x="0.0" y="282" width="560" height="141"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfS-Jo-kBh" userLabel="slow">
-                                                <rect key="frame" x="0.0" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="slow"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="MxI-aX-8gA"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YSC-3r-oil" userLabel="vader">
-                                                <rect key="frame" x="280" y="0.0" width="280" height="134"/>
+                                                <rect key="frame" x="280" y="0.0" width="280" height="141"/>
                                                 <state key="normal" image="darthvader"/>
                                                 <connections>
                                                     <action selector="playAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="C7S-jd-WG2"/>
@@ -139,25 +138,25 @@
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="qS5-Qz-euF">
-                                        <rect key="frame" x="0.0" y="402" width="560" height="134"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="qS5-Qz-euF">
+                                        <rect key="frame" x="0.0" y="423" width="560" height="113"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPy-oT-aZe" userLabel="resume">
-                                                <rect key="frame" x="0.0" y="0.0" width="187" height="134"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="214" height="113"/>
                                                 <state key="normal" image="resume"/>
                                                 <connections>
                                                     <action selector="resumeAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="xeK-PT-4Oz"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ax-RG-cDE" userLabel="pause">
-                                                <rect key="frame" x="187" y="0.0" width="187" height="134"/>
+                                                <rect key="frame" x="214" y="0.0" width="213" height="113"/>
                                                 <state key="normal" image="pause"/>
                                                 <connections>
                                                     <action selector="pauseAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="W7V-Ym-4IP"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jvn-ff-kge" userLabel="stop">
-                                                <rect key="frame" x="374" y="0.0" width="187" height="134"/>
+                                                <rect key="frame" x="427" y="0.0" width="134" height="113"/>
                                                 <state key="normal" image="stopButton"/>
                                                 <connections>
                                                     <action selector="stopPlayingAudio:" destination="tqh-HG-3Tf" eventType="touchUpInside" id="7Ix-jc-fmx"/>
